# CosmoRecon

./: .gitignore  LICENSE  readme.md  tf_environment.yml
CosmoFiller/: params.json
CosmoFiller/CosmoFiller/: OutputReaders.py  alm_recon.py  checkpoints.py  datahandler.py  datahandler2d.py  inpainting.py  inpainting2d.py
CosmoFiller/scripts/: clean_outputs.py  evaluate_2d_dithering.py  evaluate_model.py  optimize_hyperpars.py  output.out  restart_training_from_saved_model.py  training_2d_dithering.py  training_script_masked.py  (+3 more)
CosmoRecon/: params.json  pyproject.toml
CosmoRecon/CosmoRecon/: OutputReaders.py  __init__.py  checkpoints.py  datahandler.py  models.py
CosmoRecon/CosmoRecon/utils/: __init__.py  gpu.py  loggers.py
CosmoRecon/examples/: 01_quickstart.ipynb  02_data_pipeline.ipynb  03_losses_and_utilities.ipynb  test_inpainting.ipynb  test_net_nmesh64.ipynb  test_reader.ipynb
CosmoRecon/scripts/: clean_outputs.py  evaluate_model.py  optimize_hyperpars.py  restart_training_from_saved_model.py  submit_training_script_new.sbatch  train.py
CosmoRecon/tests/: conftest.py  test_checkpoints.py  test_datahandler.py  test_evaluate.py  test_gpu_config.py  test_restart.py  test_train_helpers.py  test_train_integration.py  test_train_validation.py
UNetModelMasked/: EpochCheckpoint.py  InpaintingModel.py  OutputReaders.py  clean_outputs.py  environment.yml  optimize_hyperpars.py  params.json  pipeline_diagram.md  read_outputs.ipynb  submit_training_script_new.sbatch  test_inpainting.ipynb  training_script.py  training_script_new.py  training_script_pytorch.py
(+4 files in other folders)
